# sora-voice-matcher

./: .gitignore  .gitmodules  README.md  additional.md  analyze_context.py  analyze_voice_files.py  check_similarity.py  context_analysis_report.json  convert_voice.ps1  converter.py  extract_voice_data.py  generate_id_mapping.py  main.py  match_result.csv  match_voices.py  package_assets.ps1  prepare_game_assets.ps1  pyproject.toml  skipped_voice_data.json  unmatched_voice_data.json  update_game_files.ps1  voice_id_mapping.csv  voice_renamer.py
