[project]
name = "sora-voice-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blowfish>=0.6.1",
    "numpy>=2.3.2",
    "pyquaternion>=0.9.9",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "xxhash>=3.5.0",
    "zstandard>=0.24.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
